--- a/coderscoopinc/Laravelpaypal/composer.json
+++ b/coderscoopinc/Laravelpaypal/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "coderscoopinc/laravelpaypal",
-    "description": "Coder Scoop Laravel Paypal integration",
+    "name": "Guiniverejane/laravelpaypal",
+    "description": "Coder Scoop Laravel Paypal integration - a sugar over the paypal API",
     "license": "MIT",
     "authors": [
         {
@@ -11,7 +11,10 @@
   
     "minimum-stability": "dev",
     "require": {
+        "php": "^7.0",
         "guzzlehttp/guzzle": "~6.0",
         "phpunit/phpunit": "4.8.*"
     }
 }
+
+
