--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
   
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": "^7.0",
         "guzzlehttp/guzzle": "~6.0",
