swtich to stable

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
             "email": "guinifer.k@gmail.com"
         }
     ],
+  "minimum-stability": "stable",
    
     "require": {
         "php": "^7.0",
