swtich to stable

--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,11 @@
             "email": "guinifer.k@gmail.com"
         }
     ],
-  "minimum-stability": "stable",
-   
+  
     "require": {
         "php": "^7.0",
-        "guzzlehttp/guzzle": "~6.0",
-    }
+        "guzzlehttp/guzzle": "~6.0"
+            }
 }
 
 
