--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "email": "guinifer.k@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": "^7.0",
         "guzzlehttp/guzzle": "~6.0"
