--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,12 @@
             "email": "guinifer.k@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {
         "php": "^7.0",
         "guzzlehttp/guzzle": "~6.0"
             },
-    "autoload": {
-        "psr-4": {
-            "coderscoop\\laravelpaypal\\": "src/"
-        }
+    
     }
 }
 
