--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "php": "^7.0",
         "guzzlehttp/guzzle": "~6.0"
             },
-    
+    "autoload": {
+        "psr-4": {
+            "coderscoop\\laravelpaypal\\": "src/"
+        }
     }
 }
 
