--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^5.0",
+        "php": ">=5.6.4",
         "guzzlehttp/guzzle": "~6.0"
             },
     "autoload": {
